<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kidscademy.quiz.activity.GameActivity">

    <include layout="@layout/compo_page_background" />

...
        android:layout_marginEnd="16dp"
        android:layout_marginTop="48dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.kidscademy.quiz.view.RandomColorFAB
            android:id="@+id/game_fab_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:elevation="6dp"
            app:fabSize="normal"
            app:srcCompat="@drawable/action_add" />

        <com.kidscademy.quiz.view.RandomColorFAB
            android:id="@+id/game_fab_hint"
            style="@style/FAB.MenuItem"
            app:srcCompat="@drawable/action_menu"
            tools:visibility="visible" />

        <com.kidscademy.quiz.view.RandomColorFAB
            android:id="@+id/game_fab_view_grid"
...
            android:id="@+id/game_fab_skip_next"
            style="@style/FAB.MenuItem"
            app:srcCompat="@drawable/action_skip_next"
            tools:visibility="visible" />

        <com.kidscademy.quiz.view.RandomColorFAB
            android:id="@+id/game_fab_back"
            style="@style/FAB.MenuItem"
            app:srcCompat="@drawable/action_back"
            tools:visibility="visible" />
    </LinearLayout>

    <js.view.DialogOverlay
...
