<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quiz_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kidscademy.quiz.activity.QuizStartActivity">

    <include layout="@layout/compo_page_background" />

...
        android:id="@+id/quiz_start_warning"
        style="@style/Text.Paragraph.Center.Accent"
        android:layout_marginTop="90dp"
        android:text="@string/quiz_start_warning" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/quiz_start_icons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:foregroundGravity="center_horizontal">
...
