...
                    android:scaleX="0.6"
                    android:scaleY="0.6"
                    android:stepSize="1" />
            </FrameLayout>

            <TextView
                android:id="@+id/quiz_solved"
                style="@style/Text.Label.Large"
                android:textColor="@color/blue_300"
                tools:text="3" />

            <TextView style="@style/Text.Label.Separator.Large" />

...
            android:background="@color/black_TA0"
            android:padding="20dp"
            android:scaleType="fitCenter"
            tools:src="@drawable/piano" />

        <TextView
            android:id="@+id/quiz_name"
            style="@style/Text.Title.Block.Inverse"
            tools:text="piano" />

        <include layout="@layout/compo_quiz_options" />
    </LinearLayout>

...
