...
        <item name="android:layout_marginLeft">4dp</item>
        <item name="android:background">?colorPrimaryDark</item>
    </style>

    <string name="main_caption">MUSICAL INSTRUMENTS</string>
    <string name="main_game">Game</string>
    <string name="main_quiz">Quiz</string>
    <string name="main_logo">Logo</string>
    <string name="main_brand">Brand</string>
    <string name="main_country">Country</string>
    <string name="main_year">Year</string>
    <string name="main_score">Score</string>

...
